<resources>
    <string name="app_name">Meal Record</string>

    <!-- Strings related to login -->
    <!-- Not intending to use many of these, but leaving them in case I find a use later-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_info">For first time users, the default password for this app is: password. You may change this in the settings menu.</string>
    <string name="password_error">Password Error</string>

    <!--Main Screen/Home Screen Strings -->
    <string name="edit_meals">Edit Meals</string>
    <string name="add_meal">Add Meal</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="view_meals">View Meals</string>
    <string name="password">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="meal_record">Meal Record</string>

    <!-- Strings related to Settings -->

    <string name="settings_confirm_button">Confirm</string>
    <string name="settings_password">New Password</string>
    <string name="settins_confirm_password">Confirm New Password</string>
    <string name="settings_textView">If you wish to change your password, you can do so here. Simply enter your new password below, and confirm it.</string>
    <string name="settings_error">Your passwords do not match</string>

    <string name="settings_delete_textView">If you wish to delete all current meal entries, push the, Delete All Entries, button. Warning, this action is irreversible.</string>
    <string name="delete_all">Delete All Entries</string>

    <!-- Strings related to Add Meals Screen -->

    <string name="confirm_meal">Confirm Meal</string>

    <!-- Strings related to Add Meals Screen -->

    <string name="confirm_changes">Confirm Changes</string>

    <!-- String related to List Screen-->
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>



    <!-- String related to About App Screen-->

    <string name="about_app1">Meal Record is an app designed to help keep track of meals, both their content, their creators, and when they are had. This is meant to help those looking
                            to regulate their consumption, as well as for future reference for personal or medical reasons. The app is not strict, so you may track as many things as you want.</string>
    <string name="about_app2">When creating Meals to track, you will be asked to imput the following information. The most important part of entering meals is the Name/Date entry.</string>
    <string name="about_app_Name_Date">-The Name/Date field is where a name for the meal and a date are stored. Listing a date and a name are important so that you and the app can keep track of your meals accurately.
                                        Naming with dates will help keep meals named uniquely, a requirement for creating new meals.</string>string>
    <string name="about_app_Preparer">-The Preparer field is where you can denote who made the meal. A person or an establishment are acceptable answers.
                                        This information is recommended, as an aid in case of foodborne illness, but is not required.</string>
    <string name="about_app_Calories">-The Calories field is where you can store calorie information about a meal if you wish. This information is not required to use the app.</string>
    <string name="about_app_Desc">-The Description field is where you can store any additional notes about a meal that you would like to keep for later. This information is not required.</string>
















    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
