<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/about_app1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/about_app2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="113dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:text="@string/about_app_Name_Date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/about_app_Preparer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/about_app_Calories"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/about_app_Desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>